.metadata/.plugins/org.eclipse.cdt.ui/testing.build.log
02:24:44 **** Incremental Build of configuration Debug for project testing ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\testing.o" "..\\src\\testing.c" 
..\src\testing.c: In function 'main':
..\src\testing.c:8:17: error: expected expression before ',' token
  int a[3] = {1, ,3};
                 ^

02:24:44 Build Finished (took 466ms)

